Fix boards escaping their showcase on mobile

--- a/src/board_showcase.scss
+++ b/src/board_showcase.scss
@@ -15,10 +15,6 @@
             font-size: 48px;
         }
 
-        .boardContainer {
-            max-height: 800px;
-        }
-
         .toggleBoardView {
             height: 128px;
         }
